Update minimum Java version to Java 9